--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,6 @@ INCLUDE(SetCompileFlag.cmake)
 SET_COMPILE_FLAG(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}"
                  Fortran "-fno-automatic")
 
-# add ramC library
-#add_library(ramC src/ramC/ramC.c++ src/ramC/rambo_.for)
 
 
 include_directories(/Users/luchinsky/Work/clhep/install/include/)
@@ -35,7 +33,6 @@ include_directories(/Users/luchinsky/Work/EvtGen/external/HepMC/include/)
 # adding sources for EvtGen
 include_directories(src/)
 file(GLOB_RECURSE evtgen_sources src/*.cc src/*.for src/src/*)
-add_executable(chiC_MM.exe ${evtgen_sources})
-target_link_libraries(chiC_MM.exe ${ROOT_LIBRARIES} ${EVTGEN_LIBRARY_DIR}/archive/libEvtGen.a)
-target_link_libraries(chiC_MM.exe /Users/luchinsky/Work/EvtGen/external/HepMC/lib/libHepMC.a)
-#target_link_libraries(chiC_MM.exe ramC)
+add_executable(chiC_all.exe ${evtgen_sources})
+target_link_libraries(chiC_all.exe ${ROOT_LIBRARIES} ${EVTGEN_LIBRARY_DIR}/archive/libEvtGen.a)
+target_link_libraries(chiC_all.exe /Users/luchinsky/Work/EvtGen/external/HepMC/lib/libHepMC.a)
