looking for HepMC in cmake script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,17 @@ set(CMAKE_OSX_DEPLOYMENT_TARGET "")
 
 include(FindROOT.cmake)
 MESSAGE(${ROOT_LIBRARIES})
+
 include(FindEvtGen.cmake)
+
+include(FindHepMC.cmake)
+MESSAGE(${HepMC_LIBRARY_DIR})
+
 
 include_directories(src)
 include_directories(${ROOT_INCLUDE_DIR})
 include_directories(${EVTGEN_INCLUDE_DIR})
+include_directories(${HepMC_INCLUDE_DIR})
 
 ## set fortran flags
 INCLUDE(SetCompileFlag.cmake)
@@ -25,19 +31,15 @@ SET_COMPILE_FLAG(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}"
 
 
 
-include_directories(/Users/luchinsky/Work/clhep/install/include/)
-
-include_directories(/Users/luchinsky/Work/clhep/install/include/)
-include_directories(/Users/luchinsky/Work/EvtGen/external/HepMC/include/)
 
 # adding sources for EvtGen
 include_directories(src/)
 file(GLOB_RECURSE evtgen_sources src/chic_all.cc src/*.for src/src/*)
 add_executable(chiC_all.exe ${evtgen_sources})
 target_link_libraries(chiC_all.exe ${ROOT_LIBRARIES} ${EVTGEN_LIBRARY_DIR}/archive/libEvtGen.a)
-target_link_libraries(chiC_all.exe /Users/luchinsky/Work/EvtGen/external/HepMC/lib/libHepMC.a)
+target_link_libraries(chiC_all.exe ${HepMC_LIBRARY_DIR}/libHepMC.a)
 
 # adding sources for read_data
 add_executable(read_data.exe src/read_data.cc)
 target_link_libraries(read_data.exe ${ROOT_LIBRARIES} ${EVTGEN_LIBRARY_DIR}/archive/libEvtGen.a)
-target_link_libraries(read_data.exe /Users/luchinsky/Work/EvtGen/external/HepMC/lib/libHepMC.a)
+target_link_libraries(read_data.exe ${HepMC_LIBRARY_DIR}/libHepMC.a)
