Get rid of ramC, only rambo_

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,11 +55,8 @@ target_link_libraries(read_data.exe ${ROOT_LIBRARIES} ${EVTGEN_LIBRARY_DIR}/arch
 target_link_libraries(read_data.exe ${HepMC_LIBRARY_DIR}/libHepMC.a)
 
 
-# add ramC library
-add_library(ramC src/MMSh/ramC/ramC.c++ src/MMSh/ramC/rambo_.for)
 # adding sources for MMSh
-add_executable(MMSh.exe src/MMSh/MMSh.c++)
+add_executable(MMSh.exe src/MMSh/MMSh.c++ src/MMSh/rambo_.for)
 #target_link_libraries(MMSh.exe ${ROOT_LIBRARIES} ${EVTGEN_LIBRARY_DIR}/archive/libEvtGen.a)
 #target_link_libraries(MMSh.exe ${HepMC_LIBRARY_DIR}/libHepMC.a)
-target_link_libraries(MMSh.exe ramC)
 SET_TARGET_PROPERTIES(MMSh.exe  PROPERTIES LINK_FLAGS -lgfortran)
