--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,5 +62,7 @@ target_link_libraries(MMSh.exe ${ROOT_LIBRARIES})
 SET_TARGET_PROPERTIES(MMSh.exe  PROPERTIES LINK_FLAGS -lgfortran)
 
 # adding sources to gen_pol
-add_executable(gen_pol.exe src/matr2_pol/gen_pol.cc)
+add_executable(gen_pol.exe src/a.for src/matr2_pol/gen_pol.cc)
 target_link_libraries(gen_pol.exe ${ROOT_LIBRARIES} ${EVTGEN_LIBRARY_DIR}/archive/libEvtGen.a)
+target_link_libraries(gen_pol.exe ${HepMC_LIBRARY_DIR}/libHepMC.a)
+SET_TARGET_PROPERTIES(gen_pol.exe  PROPERTIES LINK_FLAGS -lgfortran)
